--- a/avalon.css
+++ b/avalon.css
@@ -52,3 +52,12 @@
     color: #fff;
     background-color: #f0ad4e;
 }
+
+@media (max-width: 767px) { 
+    .narrar {
+        font-size: 10px;
+    }
+    .btn-personagem {
+        font-size: 10px;
+    }
+}
